# cromio.io

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  test.io
grammar/: Expressions.g4  Grammar.g4  Tokens.g4
grammar/Tokens/: Fragment.g4  IntegerTokens.g4  Main.g4  StringTokens.g4  Tokens.g4  Tokens.tokens
includes/: Helpers.cpp  Helpers.h
includes/Parser/: FormattedStringParser.h  ParserLiterals.h
includes/parser/: FormattedStringParser.h  Parser.h
libs/: json.hpp
parser/: FormattedStringParser.h  Parser.cpp  Parser.h
src/: Helpers.cpp  cromio.cpp  cromio.h  main.cpp
src/backend/: BytecodeEmitter.cpp  BytecodeEmitter.h  backend.h
src/generator/llvm/: bytecode.cpp  bytecode.h  ir.cpp  ir.h
src/helpers/: Helpers.cpp
src/includes/parser/: FormattedStringParser.h  Parser.h
src/lexer/antlr/: Grammar.cpp  Grammar.h  Grammar.interp  GrammarBaseListener.h  GrammarBaseVisitor.h  GrammarListener.h  GrammarVisitor.h  Tokens.cpp  Tokens.h  Tokens.interp  Tokens.tokens
src/lexer/grammars/: ArraysGrammar.g4  DictionaryGrammar.g4  ExpressionsGrammar.g4  Grammar.g4  LiteralsGrammar.g4  VariableGrammar.g4
src/lexer/tokens/: FragmentTokens.g4  Main.tokens  MainTokens.g4  NumberTokens.g4  StringTokens.g4  Tokens.g4  Tokens.tokens
src/libs/: json.hpp
src/llvm/: ir.cpp  ir.h
src/lowering/: IR.cpp  IR.h  ir.cpp  lowering.h
src/lowering/ir/: IR.cpp  IR.h
src/modules/: io.cpp  io.h  modules.h
src/modules/io/print/: print.cpp  print.h
src/optimizer/: AST.h  Optimizer.cpp  Optimizer.h  optimizer.h
src/parser/: BaseParser.cpp  BaseParser.h  ExpressionStatements.cpp  ExpressionStatements.h  FormattedStringParser.h  Parser.cpp  Parser.h  ParserLiterals.cpp  ParserLiterals.h  ParserVariables.cpp  ParserVariables.h  parser.h
src/runtime/: runtime.h
src/semantic/: AST.cpp  AST.h  BaseSemantic.cpp  BaseSemantic.h  Scope.cpp  Scope.h  Semantic.cpp  TypeChecker.cpp  TypeChecker.h  Variables.cpp  Variables.h  VariablesSemanticAnalyze.cpp  VariablesSemanticAnalyze.h  semantic.h
src/semantic/arrays/: Arrays.cpp  Arrays.h
src/semantic/dictionaries/: Dictionaries.cpp  Dictionaries.h
src/semantic/scopes/: Scope.cpp  Scope.h
src/semantic/variables/: Variables.cpp  Variables.h
src/utils/: AntlrErrorListener.cpp  AntlrErrorListener.h  Error.cpp  Error.h  Helpers.cpp  Helpers.h  utils.h
src/visitor/: BaseVisitor.cpp  BaseVisitor.h  ExpressionVisitor.cpp  ExpressionVisitor.h  LiteralsVisitor.cpp  LiteralsVisitor.h  ProgramVisitor.cpp  ProgramVisitor.h  VariablesVisitor.cpp  VariablesVisitor.h  visitor.h
src/visitor/arrays/: ArraysVisitor.cpp  ArraysVisitor.h
src/visitor/base/: BaseVisitor.h
src/visitor/dictionaries/: DictionaryVisitor.cpp  DictionaryVisitor.h
src/visitor/dictionary/: DictionaryVisitor.cpp  DictionaryVisitor.h
src/visitor/expressions/: ExpressionVisitor.cpp  ExpressionVisitor.h
src/visitor/literals/: LiteralsVisitor.cpp  LiteralsVisitor.h
src/visitor/nodes/: BaseNode.h  DictionaryNode.h  MemberAccessNode.h  StatementNode.h  VariableNode.h  nodes.h
src/visitor/program/: ProgramVisitor.cpp  ProgramVisitor.h
src/visitor/variables/: VariablesVisitor.cpp  VariablesVisitor.h
visitor/: Visitor.h
